[tool.poetry]
name = "design-assistant-tools"
version = "0.1.0"
description = "Assistant Chainlit con Function Calling per consulenze di interior design"
authors = ["Gege Xia"]
readme = "README.md"
packages = [{ include = "design_assistant" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
openai = "^2.40.0"
chainlit = "^2.11.1"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
